--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/HLogo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React Portfolio</title>
+  <title>HGoma Portfolio</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-DF63XZDX6N"></script>
   <script>
